--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "license": "MIT",
   "module": "spa-router.js",
   "files": [
-    "spa-router.js",
-    "lib/*"
+    "spa-router.js"
   ],
   "repository": {
     "type": "git",
@@ -21,15 +20,16 @@
     "access": "public"
   },
   "scripts": {
-    "dev": "es-dev-server --port 5000",
+    "dev": "wds --port 5000 --app-index index.html",
     "release": "np",
     "test": "mocha ./test/test.js"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "es-dev-server": "^1.57.4",
-    "mocha": "^8.1.3",
-    "np": "^6.5.0",
-    "playwright": "^1.4.0"
+    "@web/dev-server": "^0.1.29",
+    "chai": "^4.3.4",
+    "http-server": "^14.0.0",
+    "mocha": "^9.1.3",
+    "np": "^7.6.0",
+    "playwright": "^1.17.1"
   }
 }
